--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1{
+/* h1{
     color: green;
 }
 .entry{
@@ -47,3 +47,14 @@ a{
    
 
 }
+ */
+
+ h1{
+    color : red ;
+    background-color: antiquewhite;
+
+ }
+
+ h2{
+    color: rgb(0, 200,150)
+ }
